--- a/src/components/Search/SearchBarSection.css
+++ b/src/components/Search/SearchBarSection.css
@@ -39,3 +39,8 @@
     background-color: #f9d5d3;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
+  @import "tailwindcss/base";
+
+  @import "tailwindcss/components";
+  
+  @import "tailwindcss/utilities";
