--- a/src/components/Search/SearchBarSection.css
+++ b/src/components/Search/SearchBarSection.css
@@ -11,12 +11,18 @@
     background-color: white;
     border: 1px solid;
     border-radius: 20px;
+    padding: 5px;
   }
   
   .input {
     width: 250px;
     border: none;
     border-radius: 20px;
+  }
+
+  .input:focus {
+    border: none;
+    outline: none;
   }
   
   .button {
